breakpoint altered to fix layout bug on ipad mini

--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@
 
 
 
-@media screen and (max-width: 768px) { 
+@media screen and (max-width: 600px) { 
     .body {
         display: block;
         background-color: rgb(51, 51, 61);
